--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="./js/task-3.js" type="module" defer></script> -->
     <!-- <script src="./js/task-4.js" type="module" defer></script> -->
     <!-- <script src="./js/task-5.js" type="module" defer></script> -->
-    <script src="./js/task-6.js" type="module" defer></script>
+    <!-- <script src="./js/task-6.js" type="module" defer></script> -->
+    <script src="./js/task-7.js" type="module" defer></script>
   </body>
 </html>
