--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <!-- <script src="./js/task-2.js" type="module" defer></script> -->
     <!-- <script src="./js/task-3.js" type="module" defer></script> -->
     <!-- <script src="./js/task-4.js" type="module" defer></script> -->
-    <script src="./js/task-5.js" type="module" defer></script>
+    <!-- <script src="./js/task-5.js" type="module" defer></script> -->
     <!-- <script src="./js/task-6.js" type="module" defer></script> -->
     <!-- <script src="./js/task-7.js" type="module" defer></script> -->
     <!-- <script src="./js/task-8.js" type="module" defer></script> -->
     <!-- <script src="./js/task-9.js" type="module" defer></script> -->
     <!-- <script src="./js/task-10.js" type="module" defer></script> -->
+    <script src="./js/lesson-2.js" type="module" defer></script>
   </body>
 </html>
