--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <!-- <script src="./js/task-9.js" type="module" defer></script> -->
     <!-- <script src="./js/task-10.js" type="module" defer></script> -->
     <script src="./js/lesson-2.js" type="module" defer></script>
+    <script src="./js/lesson-3.js" type="module" defer></script>
   </body>
 </html>
